services/mysql-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: mysql
    tier: be
    role: db
  name: mysql
spec:
  ports:
  - port: 33306
    protocol: TCP
    targetPort: 3306
    name: mysql
  selector:
    name: mysql
  type: LoadBalancer
