services/nginx.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
   run: nginx
  name: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  selector:
    run: nginx
  type: LoadBalancer
